syntax = "proto3";

package substreams.v1.program;

message Data {
    repeated PoolCreated_Event pool_created_event_list = 1;
    repeated CreatePool_Instruction create_pool_instruction_list = 2;
    repeated Initialize_Instruction initialize_instruction_list = 3;
    repeated BetPlaced_Event bet_placed_event_list = 4;
    repeated PlaceBet_Instruction place_bet_instruction_list = 5;
    repeated PoolMediaSet_Event pool_media_set_event_list = 6;
}

message PoolCreated_Event {
  string tx_hash = 1;
  uint64 pool_id = 2;
  string question = 3;
  repeated string options = 4;
  int64 bets_close_at = 5;
  string media_url = 6;
  int32 media_type = 7;
  string category = 8;
  string creator_name = 9;
  string creator_id = 10;
  string closure_criteria = 11;
  string closure_instructions = 12;
  int64 created_at = 13;
}

message CreatePool_Instruction {
    string tx_hash = 1;
    string question = 2;
    repeated string options = 3;
    int64 bets_close_at = 4;
    string media_url = 5;
    int32 media_type = 6;
    string category = 7;
    string creator_name = 8;
    string creator_id = 9;
    string closure_criteria = 10;
    string closure_instructions = 11;
    string acct_betting_pools = 12;
    string acct_pool = 13;
    string acct_authority = 14;
}
message Initialize_Instruction {
  string trx_hash = 1;
    string usdc_mint = 2;
    string bet_points_mint = 3;
    string acct_betting_pools = 4;
    string acct_authority = 5;
}

message BetPlaced_Event {
  string tx_hash = 1;
  uint64 bet_id = 2;
  uint64 pool_id = 3;
  string user = 4;
  uint64 option_index = 5;
  uint64 amount = 6;
  int32 token_type = 7;
  int64 created_at = 8;
}

message PoolMediaSet_Event {
  string tx_hash = 1;
  uint64 pool_id = 2;
  string media_url = 3;
  int32 media_type = 4;
}

message PlaceBet_Instruction {
  string tx_hash = 1;
  uint64 option_index = 2;
  uint64 amount = 3;
  int32 token_type = 4;
  string acct_betting_pools = 5;
  string acct_pool = 6;
  string acct_bet = 7;
  string acct_bettor = 8;
  string acct_bettor_token_account = 9;
  string acct_program_token_account = 10;
}

